# AFL-tutorial

./: .gitignore  01-introduction.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: build-wheels.yml
AFL/double_agent_tutorial/: __init__.py
AFL/double_agent_tutorial/core/: GaussianProcess.py  TFGaussianProcess.py  VirtualInstrument.py  __init__.py
AFL/double_agent_tutorial/instruments/: N.py  __init__.py  challenge1.py  challenge2.py  challenge3.py  tutorial.py
AFL/tutorial/core/: actively_learn.py
AFL/tutorial/instruments/: N.py  challenge2.py  tutorial.py
data/SANS/: FEB20101.ABS  FEB20107.ABS  FEB20125.ABS  high_q.ABS  low_q.ABS  med_q.ABS
dev/: build_wheels.ipynb
notebooks/: 01-introduction.ipynb  02-sklearn-instructor.ipynb  02-sklearn-student.ipynb  02-sklearn.ipynb  03-afl-dev.ipynb  03-afl-pipelines-instructor.ipynb  C1-challenge1.ipynb  C2-challenge2.ipynb  C3-challenge3.ipynb  CX-inspiration.ipynb
wheels/: afl_tutorial-0.1.0-py3-none-any.whl  cftime-1.6.4.post1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  sasmodels-1.0.8-py3-none-any.whl  tinycc-1.1-py3-none-any.whl
